--- a/mobile-app/app.json
+++ b/mobile-app/app.json
@@ -9,6 +9,7 @@
     "expo-file-system": "~15.2.2",
     "react-native-safe-area-context": "4.5.0",
     "axios": "^1.4.0",
+    "@react-native-community/cli": "latest",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "react-native-screens": "~3.20.0",
